              installation to ensure non-standard directories are picked up.
   * #567422: Fresh backport of Drupal 7 SimpleTest.
   * #545228: Missing D7 constants.
   * Remove simpletest.function.inc.
   * Correct file_scan_directory() $mask parameter API change.
   * Correct another 'class' atrribute as array().
   * Update files.
   * Changes to install.php included in D6 core patch.

SimpleTest 6.x-2.8, 2009-04-23
------------------------------
- Bugs:
   * #382334: drupalGetNodeByTitle uses node_load_multiple in 6.x.
   * #385152: Clear user_access() cache.
   * Change file in drupalGetTestFiles() to use ereg() format used in Drupal 6.
   * #430512 by soxofaan: Drupal 7 style database code in run-tests.sh.
   * #430682: backport: run-tests.sh does not work with non-default server port.
- Changes:
   * #346844: Clear language statics to remove locale module errors.
   * #400296 by carlos8f: Use "SHOW TABLES" in simpletest_get_like_tables().
   * #390232: Update 313902-2.patch to D6.10 misc/drupal.js
   * #409372 by Dave Reid: Hide modules that have hidden = TRUE on admin/build/modules.
   * #415864: Backport sample files.
   * #400296: Revert: Use "SHOW TABLES" in simpletest_get_like_tables().
   * #409294 by wlp1979: Add extra condition to getAssertionCall() for DrupalWebTestCaseCore.
   * Merge DrupalWebTestCase change into DrupalWebTestCaseCore.
   * Move "core" directory files into root.
   * #442436: Full backport of Drupal 7 SimpleTest and common.inc functions.

SimpleTest 6.x-2.7, 2009-02-16
------------------------------
- Bugs:
   * #372697: Content type created but not  "appearing".
   * #373722: Table {node_revision} doesn't exist
- Changes:
   * #370966: Ignore 1.x style tests.
   * Format fix.
   * #373172: Add curl requirement to documentation.

SimpleTest 6.x-2.6, 2009-02-07
------------------------------
- Complete backport of Drupal 7.x SimpleTest module. (voids all backports).
   * Added header to all relevant files.
   * Updated INSTALL.txt.