@@ -360,3 +360,20 @@ class SimpleTestMailCaptureTestCase extends DrupalWebTestCase {
     $this->assertEqual(count($captured_emails), 2, t('All e-mails with the same id are returned when filtering by id.'), t('E-mail'));
   }
 }
+
+/**
+ * Capture e-mail message during testing.
+ *
+ * Code copied from TestingMailSystem in mail.sending.inc (Drupal 7). Placed in
+ * this file to ensure no loaded until in testing mode, to ensure no conflicts
+ * with other implementations like devel.
+ *
+ * @param $message
+ *   An e-mail message.
+ */
+function drupal_mail_wrapper(array $message) {
+  $captured_emails = variable_get('drupal_test_email_collector', array());
+  $captured_emails[] = $message;
+  variable_set('drupal_test_email_collector', $captured_emails);
+  return TRUE;
+}
